test: cover topic-level fallback without question content